--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 permalink: /:categories/:title/
-url: "http://example.com"
-full_name: "Saigon Jekyll Theme"
-first_name: "Just"
-last_name: "Me"
-blog_title: "Title"
+url: "https://NanotechNorseman.github.io"
+full_name: "NanotechNorseman"
+first_name: "Nanotech"
+last_name: "Norseman"
+blog_title: "Simple Guy doing Normal Things"
 author_img_name_path: "/images/users/user.jpg"
-disqus_shortname: "example"
+disqus_shortname: ""
 copyright_year: "2016"
-google_analytics_code: ""
-aboutme: "I like ramen noodles with cream."
+google_analytics_code: "UA-89383103-1"
+aboutme: "Jack of all trades, Master of some"
